...
    fun loadEvents() {
        viewModelScope.launch(Dispatchers.IO) {
            _uiState.update { it.copy(isLoading = true, error = null) }
            try {
                val dbAll = repository.getAll()
                
                // Añadimos datos de prueba si la lista está completamente vacía (para que se vea contenido en "Todos")
                if (dbAll.isEmpty()) {
                    repository.insertEvent(
                        title = "Observación de las Perseidas",
                        description = "Noche de observación en la sierra seca. Lleva ropa de abrigo y telescopios.",
                        location = "Sierra Nevada, Granada",
                        dateTime = "2026-08-12 22:00",
...
